--- a/Building-a-Music-Generator-App.ipynb
+++ b/Building-a-Music-Generator-App.ipynb
@@ -399,7 +399,16 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "  3%|▎         | 6/200 [00:24<13:37,  4.21s/it]"
+            "100%|██████████| 200/200 [15:30<00:00,  4.65s/it]\n",
+            "C:\\Users\\mason\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\gradio\\processing_utils.py:340: UserWarning: Trying to convert audio automatically from float32 to 16-bit int format.\n",
+            "  warnings.warn(warning.format(data.dtype))\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Keyboard interruption in main thread... closing server.\n"
           ]
         }
       ],
