--- a/Building-a-Music-Generator-App.ipynb
+++ b/Building-a-Music-Generator-App.ipynb
@@ -670,8 +670,8 @@
         "\n",
         "pipe = AudioLDM2Pipeline.from_pretrained(\n",
         "    model_id,\n",
-        "    torch_dtype = torch.float16,\n",
-        ").to(\"cuda\")"
+        "    #torch_dtype = torch.float16,\n",
+        ").to(\"cpu\")"
       ]
     },
     {
@@ -693,7 +693,7 @@
       },
       "outputs": [],
       "source": [
-        "generator = torch.Generator(\"cuda\").manual_seed(0)"
+        "generator = torch.Generator(\"cpu\").manual_seed(0)"
       ]
     },
     {
