--- a/Building-a-Music-Generator-App.ipynb
+++ b/Building-a-Music-Generator-App.ipynb
@@ -43,7 +43,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "! pip install torchvision"
+        "#! pip install torchvision"
       ]
     },
     {
@@ -354,7 +354,7 @@
       },
       "outputs": [],
       "source": [
-        "! pip install -q gradio"
+        "#! pip install -q gradio"
       ]
     },
     {
@@ -448,7 +448,9 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "  1%|          | 2/200 [00:06<11:05,  3.36s/it]"
+            "100%|██████████| 200/200 [13:38<00:00,  4.09s/it]\n",
+            "C:\\Users\\mason\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\gradio\\processing_utils.py:340: UserWarning: Trying to convert audio automatically from float32 to 16-bit int format.\n",
+            "  warnings.warn(warning.format(data.dtype))\n"
           ]
         }
       ],
