--- a/Speech to text.ipynb
+++ b/Speech to text.ipynb
@@ -2,189 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting SpeechRecognition\n",
-      "  Downloading SpeechRecognition-3.10.1-py2.py3-none-any.whl.metadata (28 kB)\n",
-      "Requirement already satisfied: requests>=2.26.0 in c:\\users\\mason\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from SpeechRecognition) (2.31.0)\n",
-      "Requirement already satisfied: typing-extensions in c:\\users\\mason\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from SpeechRecognition) (4.8.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mason\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from requests>=2.26.0->SpeechRecognition) (3.3.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mason\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from requests>=2.26.0->SpeechRecognition) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mason\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from requests>=2.26.0->SpeechRecognition) (2.0.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mason\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from requests>=2.26.0->SpeechRecognition) (2023.7.22)\n",
-      "Downloading SpeechRecognition-3.10.1-py2.py3-none-any.whl (32.8 MB)\n",
-      "   ---------------------------------------- 0.0/32.8 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/32.8 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/32.8 MB 653.6 kB/s eta 0:00:51\n",
-      "   ---------------------------------------- 0.1/32.8 MB 656.4 kB/s eta 0:00:50\n",
-      "   ---------------------------------------- 0.2/32.8 MB 1.2 MB/s eta 0:00:28\n",
-      "   ---------------------------------------- 0.2/32.8 MB 1.2 MB/s eta 0:00:28\n",
-      "   ---------------------------------------- 0.3/32.8 MB 1.4 MB/s eta 0:00:23\n",
-      "    --------------------------------------- 0.5/32.8 MB 1.7 MB/s eta 0:00:19\n",
-      "    --------------------------------------- 0.6/32.8 MB 1.9 MB/s eta 0:00:17\n",
-      "   - -------------------------------------- 1.0/32.8 MB 2.7 MB/s eta 0:00:12\n",
-      "   - -------------------------------------- 1.1/32.8 MB 2.9 MB/s eta 0:00:12\n",
-      "   - -------------------------------------- 1.4/32.8 MB 3.1 MB/s eta 0:00:11\n",
-      "   - -------------------------------------- 1.4/32.8 MB 3.1 MB/s eta 0:00:11\n",
-      "   - -------------------------------------- 1.4/32.8 MB 2.5 MB/s eta 0:00:13\n",
-      "   -- ------------------------------------- 2.4/32.8 MB 4.1 MB/s eta 0:00:08\n",
-      "   -- ------------------------------------- 2.4/32.8 MB 3.9 MB/s eta 0:00:08\n",
-      "   --- ------------------------------------ 2.7/32.8 MB 3.9 MB/s eta 0:00:08\n",
-      "   --- ------------------------------------ 2.9/32.8 MB 4.2 MB/s eta 0:00:08\n",
-      "   --- ------------------------------------ 3.0/32.8 MB 4.1 MB/s eta 0:00:08\n",
-      "   --- ------------------------------------ 3.0/32.8 MB 4.1 MB/s eta 0:00:08\n",
-      "   ----- ---------------------------------- 4.3/32.8 MB 5.0 MB/s eta 0:00:06\n",
-      "   ----- ---------------------------------- 4.3/32.8 MB 4.9 MB/s eta 0:00:06\n",
-      "   ----- ---------------------------------- 4.3/32.8 MB 4.9 MB/s eta 0:00:06\n",
-      "   ------ --------------------------------- 5.1/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   ------ --------------------------------- 5.4/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   ------ --------------------------------- 5.6/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   ------ --------------------------------- 5.7/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   ------- -------------------------------- 6.1/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   ------- -------------------------------- 6.4/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   -------- ------------------------------- 6.6/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   -------- ------------------------------- 6.8/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   -------- ------------------------------- 7.1/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   -------- ------------------------------- 7.3/32.8 MB 5.1 MB/s eta 0:00:06\n",
-      "   --------- ------------------------------ 7.4/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   --------- ------------------------------ 7.8/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   --------- ------------------------------ 8.0/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   --------- ------------------------------ 8.1/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   ---------- ----------------------------- 8.5/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   ---------- ----------------------------- 8.7/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   ---------- ----------------------------- 8.8/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   ----------- ---------------------------- 9.1/32.8 MB 5.0 MB/s eta 0:00:05\n",
-      "   ----------- ---------------------------- 9.4/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   ----------- ---------------------------- 9.5/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   ----------- ---------------------------- 9.8/32.8 MB 5.0 MB/s eta 0:00:05\n",
-      "   ------------ --------------------------- 10.0/32.8 MB 5.0 MB/s eta 0:00:05\n",
-      "   ------------ --------------------------- 10.2/32.8 MB 5.1 MB/s eta 0:00:05\n",
-      "   ------------ --------------------------- 10.4/32.8 MB 5.5 MB/s eta 0:00:05\n",
-      "   ------------- -------------------------- 10.8/32.8 MB 5.6 MB/s eta 0:00:04\n",
-      "   ------------- -------------------------- 10.9/32.8 MB 5.7 MB/s eta 0:00:04\n",
-      "   ------------- -------------------------- 11.1/32.8 MB 5.5 MB/s eta 0:00:04\n",
-      "   ------------- -------------------------- 11.5/32.8 MB 5.6 MB/s eta 0:00:04\n",
-      "   -------------- ------------------------- 11.6/32.8 MB 6.0 MB/s eta 0:00:04\n",
-      "   -------------- ------------------------- 11.8/32.8 MB 5.8 MB/s eta 0:00:04\n",
-      "   -------------- ------------------------- 12.2/32.8 MB 5.6 MB/s eta 0:00:04\n",
-      "   --------------- ------------------------ 12.3/32.8 MB 5.6 MB/s eta 0:00:04\n",
-      "   --------------- ------------------------ 12.6/32.8 MB 5.4 MB/s eta 0:00:04\n",
-      "   --------------- ------------------------ 12.9/32.8 MB 5.5 MB/s eta 0:00:04\n",
-      "   --------------- ------------------------ 13.1/32.8 MB 5.5 MB/s eta 0:00:04\n",
-      "   ---------------- ----------------------- 13.2/32.8 MB 5.4 MB/s eta 0:00:04\n",
-      "   ---------------- ----------------------- 13.7/32.8 MB 5.6 MB/s eta 0:00:04\n",
-      "   ---------------- ----------------------- 13.8/32.8 MB 5.6 MB/s eta 0:00:04\n",
-      "   ----------------- ---------------------- 14.1/32.8 MB 5.3 MB/s eta 0:00:04\n",
-      "   ----------------- ---------------------- 14.4/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   ----------------- ---------------------- 14.4/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   ------------------ --------------------- 15.0/32.8 MB 5.4 MB/s eta 0:00:04\n",
-      "   ------------------ --------------------- 15.1/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   ------------------ --------------------- 15.1/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   ------------------- -------------------- 15.7/32.8 MB 5.3 MB/s eta 0:00:04\n",
-      "   ------------------- -------------------- 15.8/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   ------------------- -------------------- 15.8/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   ------------------- -------------------- 16.4/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   -------------------- ------------------- 16.5/32.8 MB 5.1 MB/s eta 0:00:04\n",
-      "   -------------------- ------------------- 16.7/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   -------------------- ------------------- 17.1/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   -------------------- ------------------- 17.2/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   --------------------- ------------------ 17.2/32.8 MB 5.2 MB/s eta 0:00:04\n",
-      "   --------------------- ------------------ 17.8/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   --------------------- ------------------ 17.9/32.8 MB 5.2 MB/s eta 0:00:03\n",
-      "   --------------------- ------------------ 18.0/32.8 MB 5.2 MB/s eta 0:00:03\n",
-      "   ---------------------- ----------------- 18.5/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   ---------------------- ----------------- 18.6/32.8 MB 5.2 MB/s eta 0:00:03\n",
-      "   ---------------------- ----------------- 18.7/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   ----------------------- ---------------- 19.3/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   ----------------------- ---------------- 19.3/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   ----------------------- ---------------- 19.5/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   ------------------------ --------------- 20.0/32.8 MB 5.4 MB/s eta 0:00:03\n",
-      "   ------------------------ --------------- 20.2/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   ------------------------ --------------- 20.2/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   ------------------------- -------------- 20.7/32.8 MB 5.5 MB/s eta 0:00:03\n",
-      "   ------------------------- -------------- 20.9/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   ------------------------- -------------- 20.9/32.8 MB 5.2 MB/s eta 0:00:03\n",
-      "   -------------------------- ------------- 21.4/32.8 MB 5.5 MB/s eta 0:00:03\n",
-      "   -------------------------- ------------- 21.6/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   -------------------------- ------------- 21.6/32.8 MB 5.3 MB/s eta 0:00:03\n",
-      "   --------------------------- ------------ 22.2/32.8 MB 5.5 MB/s eta 0:00:02\n",
-      "   --------------------------- ------------ 22.3/32.8 MB 5.4 MB/s eta 0:00:02\n",
-      "   --------------------------- ------------ 22.4/32.8 MB 5.2 MB/s eta 0:00:03\n",
-      "   --------------------------- ------------ 22.8/32.8 MB 5.5 MB/s eta 0:00:02\n",
-      "   --------------------------- ------------ 23.0/32.8 MB 5.3 MB/s eta 0:00:02\n",
-      "   ---------------------------- ----------- 23.0/32.8 MB 5.3 MB/s eta 0:00:02\n",
-      "   ---------------------------- ----------- 23.6/32.8 MB 5.5 MB/s eta 0:00:02\n",
-      "   ---------------------------- ----------- 23.7/32.8 MB 5.3 MB/s eta 0:00:02\n",
-      "   ---------------------------- ----------- 23.7/32.8 MB 5.3 MB/s eta 0:00:02\n",
-      "   ----------------------------- ---------- 24.3/32.8 MB 5.5 MB/s eta 0:00:02\n",
-      "   ----------------------------- ---------- 24.4/32.8 MB 5.3 MB/s eta 0:00:02\n",
-      "   ----------------------------- ---------- 24.5/32.8 MB 5.2 MB/s eta 0:00:02\n",
-      "   ------------------------------ --------- 25.0/32.8 MB 5.3 MB/s eta 0:00:02\n",
-      "   ------------------------------ --------- 25.3/32.8 MB 5.4 MB/s eta 0:00:02\n",
-      "   ------------------------------- -------- 25.7/32.8 MB 5.4 MB/s eta 0:00:02\n",
-      "   ------------------------------- -------- 26.0/32.8 MB 5.5 MB/s eta 0:00:02\n",
-      "   -------------------------------- ------- 26.4/32.8 MB 5.5 MB/s eta 0:00:02\n",
-      "   -------------------------------- ------- 26.8/32.8 MB 5.8 MB/s eta 0:00:02\n",
-      "   --------------------------------- ------ 27.2/32.8 MB 5.6 MB/s eta 0:00:02\n",
-      "   --------------------------------- ------ 27.5/32.8 MB 6.0 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 27.9/32.8 MB 5.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 28.3/32.8 MB 6.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 28.7/32.8 MB 6.0 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 29.1/32.8 MB 6.2 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 29.4/32.8 MB 6.1 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 29.8/32.8 MB 6.4 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 30.2/32.8 MB 6.3 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 30.6/32.8 MB 6.6 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 31.0/32.8 MB 6.5 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 31.3/32.8 MB 6.8 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 31.7/32.8 MB 6.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  32.1/32.8 MB 7.0 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  32.5/32.8 MB 7.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  32.8/32.8 MB 7.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  32.8/32.8 MB 7.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  32.8/32.8 MB 7.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  32.8/32.8 MB 7.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 32.8/32.8 MB 6.4 MB/s eta 0:00:00\n",
-      "Installing collected packages: SpeechRecognition\n",
-      "Successfully installed SpeechRecognition-3.10.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! pip install SpeechRecognition"
+    "#! pip install SpeechRecognition"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting PyAudio\n",
-      "  Downloading PyAudio-0.2.14-cp311-cp311-win_amd64.whl.metadata (2.7 kB)\n",
-      "Downloading PyAudio-0.2.14-cp311-cp311-win_amd64.whl (164 kB)\n",
-      "   ---------------------------------------- 0.0/164.1 kB ? eta -:--:--\n",
-      "   -- ------------------------------------- 10.2/164.1 kB ? eta -:--:--\n",
-      "   -- ------------------------------------- 10.2/164.1 kB ? eta -:--:--\n",
-      "   ------- ------------------------------- 30.7/164.1 kB 330.3 kB/s eta 0:00:01\n",
-      "   -------------- ------------------------ 61.4/164.1 kB 409.6 kB/s eta 0:00:01\n",
-      "   ---------------------------- --------- 122.9/164.1 kB 654.9 kB/s eta 0:00:01\n",
-      "   -------------------------------------- 164.1/164.1 kB 757.8 kB/s eta 0:00:00\n",
-      "Installing collected packages: PyAudio\n",
-      "Successfully installed PyAudio-0.2.14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! pip install PyAudio"
+    "#! pip install PyAudio"
    ]
   },
   {
