修正FFT檔案位置 wav檔案新增疊圖

--- a/fft_frequency-fix.ipynb
+++ b/fft_frequency-fix.ipynb
@@ -28,22 +28,21 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Note: not using Google CoLab\n",
             "Requirement already satisfied: kaleido in c:\\users\\mason\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (0.2.1)\n"
           ]
         }
       ],
       "source": [
-        "try:\n",
-        "    from google.colab import drive\n",
-        "    drive.mount('/content/drive', force_remount=True)\n",
-        "    COLAB = True\n",
-        "    print(\"Note: using Google CoLab\")\n",
-        "except:\n",
-        "    print(\"Note: not using Google CoLab\")\n",
-        "    COLAB = False\n",
+        "# try:\n",
+        "#     from google.colab import drive\n",
+        "#     drive.mount('/content/drive', force_remount=True)\n",
+        "#     COLAB = True\n",
+        "#     print(\"Note: using Google CoLab\")\n",
+        "# except:\n",
+        "#     print(\"Note: not using Google CoLab\")\n",
+        "#     COLAB = False\n",
         "\n",
-        "PATH = 'C:/Users/mason/Desktop/作業/科技系/教育大數據專題製作/EDU-Data'\n",
+        "PATH = '/content/drive/MyDrive'\n",
         "\n",
         "! pip install -U kaleido\n",
         "\n",
@@ -68,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "9eOd8Tm-jIW5"
       },
@@ -104,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "yg2kx9olG3ib"
       },
@@ -192,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -241,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "id": "bWlKT_38ssA-"
       },
@@ -281,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -318,7 +317,8 @@
         "    s = find_top_notes(fft, TOP_NOTES)\n",
         "\n",
         "    fig = plot_fft(fft.real, xf, fs, s, RESOLUTION)\n",
-        "    fig.write_image(f\"/content/frame{frame_number}.png\", scale=2)"
+        "    # fig.write_image(f\"/content/frame{frame_number}.png\", scale=2)\n",
+        "    fig.write_image(f\"{frame_number}.png\", scale=2)\n"
       ]
     },
     {
