去除不必要註解

--- a/FFT try/fft-frequency.ipynb
+++ b/FFT try/fft-frequency.ipynb
@@ -1,21 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "20dtxMl7TbDa"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/jeffheaton/present/blob/master/youtube/video/fft-frequency.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
-    "\n",
-    "Copyright 2022 by [Jeff Heaton](https://www.heatonresearch.com/), released under [LGPLv3](https://www.gnu.org/licenses/lgpl-3.0.en.html)\n",
-    "\n",
-    "[YouTube video about this code](https://www.youtube.com/watch?v=rj9NOiFLxWA)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -28,13 +15,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: not using Google CoLab\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Note: not using Google CoLab\n",
       "Requirement already satisfied: kaleido in c:\\users\\mason\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (0.2.1)\n"
      ]
     }
@@ -74,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -95,7 +76,7 @@
     "\n",
     "# Or download my sample audio\n",
     "#!wget https://github.com/jeffheaton/present/raw/master/youtube/video/sample_audio/piano_c_major_scale.wav\n",
-    "AUDIO_FILE = \"C:/Users/mason/Desktop/作業/科技系/教育大數據專題製作/EDU-Data/audio.wav\"\n",
+    "AUDIO_FILE = \"C:/Users/mason/Desktop/作業/科技系/教育大數據專題製作/EDU-Data/output/audio.wav\"\n",
     "\n",
     "fs, data = wavfile.read(os.path.join(PATH,AUDIO_FILE)) # load the data\n",
     "audio = data.T[0] # this is a two channel soundtrack, get the first track\n",
@@ -108,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +98,7 @@
        "6.25e-05"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "yg2kx9olG3ib"
    },
@@ -223,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -239,7 +220,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m xf \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfft\u001b[38;5;241m.\u001b[39mrfftfreq(FFT_WINDOW_SIZE, \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39mfs)\n\u001b[0;32m     21\u001b[0m FRAME_COUNT \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(AUDIO_LENGTH\u001b[38;5;241m*\u001b[39mFPS)\n\u001b[1;32m---> 22\u001b[0m FRAME_OFFSET \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[43mlength\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mFRAME_COUNT\u001b[49m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Pass 1, find out the maximum amplitude so we can scale.\u001b[39;00m\n\u001b[0;32m     25\u001b[0m mx \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "Cell \u001b[1;32mIn[7], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m xf \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfft\u001b[38;5;241m.\u001b[39mrfftfreq(FFT_WINDOW_SIZE, \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39mfs)\n\u001b[0;32m     21\u001b[0m FRAME_COUNT \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(AUDIO_LENGTH\u001b[38;5;241m*\u001b[39mFPS)\n\u001b[1;32m---> 22\u001b[0m FRAME_OFFSET \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[43mlength\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mFRAME_COUNT\u001b[49m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Pass 1, find out the maximum amplitude so we can scale.\u001b[39;00m\n\u001b[0;32m     25\u001b[0m mx \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
       "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
@@ -454,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
