--- a/FFT try/fft_frequency-fix.ipynb
+++ b/FFT try/fft_frequency-fix.ipynb
@@ -31,7 +31,7 @@
         "\n",
         "PATH = '/content/drive/MyDrive'\n",
         "\n",
-        "! pip install -U kaleido\n",
+        "#! pip install -U kaleido\n",
         "\n",
         "# Configuration\n",
         "FPS = 30\n",
